# prototype-db-1

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Pipfile  README.md
benchmark/: storage_engine_benchmark.cc
cmake_modules/: FindClangTools.cmake
docs/: benchmark.md  coding-style-guide.md  vscode-guide.md
include/: echo_server.h  redis_server.h  storage_engine.h
scripts/: gen_flamegraph.sh  install_prerequisite.sh  run_memtier_benchmark.sh  run_with_perf_record.sh
src/: echo_server.cc  main.cc  redis_server.cc  storage_engine.cc
